[skip publish] update icons in sidebar

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -211,13 +211,10 @@
         &[data-permalink="bitrise-platform/workspaces.html"]::before {
           mask-image: url("../images/icon-dashboard-16px.svg");
         }
-        &[data-permalink="bitrise-platform/apps.html"]::before {
+        &[data-permalink="bitrise-platform/projects.html"]::before {
           mask-image: url("../images/icon-folder-16px.svg");
         }
-        &[data-permalink="--infrastructure--"]::before {  /* TODO: Update this permalink */
-          mask-image: url("../images/icon-cpu-16px.svg");
-        }
-        &[data-permalink="bitrise-platform/connectivity.html"]::before {
+        &[data-permalink="bitrise-platform/integrations.html"]::before {
           mask-image: url("../images/icon-arrows-horizontal-16px.svg");
         }
         &[data-permalink="bitrise-platform/infrastructure.html"]::before {
@@ -269,16 +266,16 @@
         }
 
         /* Icons for Bitrias Build Cache subpages */
-        &[data-permalink="bitrise-build-cache/remote-build-caching.html"]::before {
+        &[data-permalink="bitrise-build-cache/getting-started-with-the-build-cache.html"]::before {
           mask-image: url("../images/icon-power-16px.svg");
         }
         &[data-permalink="--invocations--"]::before {  /* TODO: Update this permalink */
           mask-image: url("../images/icon-tasks-16px.svg");
         }
-        &[data-permalink="bitrise-build-cache/remote-build-cache-for-gradle.html"]::before {
+        &[data-permalink="bitrise-build-cache/build-cache-for-gradle.html"]::before {
           mask-image: url("../images/icon-gradle-16px.svg");
         }
-        &[data-permalink="bitrise-build-cache/remote-build-cache-for-bazel.html"]::before {
+        &[data-permalink="bitrise-build-cache/build-cache-for-bazel.html"]::before {
           mask-image: url("../images/icon-bazel-16px.svg");
         }
         &[data-permalink="--xcode--"]::before {  /* TODO: Update this permalink */
@@ -298,7 +295,7 @@
         &[data-permalink="release-management/configuring-connected-apps.html"]::before {
           mask-image: url("../images/icon-overview-16px.svg");
         }
-        &[data-permalink="release-management/uploading-installable-artifacts.html"]::before {
+        &[data-permalink="release-management/installable-artifacts.html"]::before {
           mask-image: url("../images/icon-install-16px.svg");
         }
         &[data-permalink="release-management/build-distribution.html"]::before {
@@ -311,7 +308,7 @@
           mask-image: url("../images/icon-code-16px.svg");
         }
 
-        /* Icons for Bitrias Insights subpages */
+        /* Icons for Bitrise Insights subpages */
         &[data-permalink="insights/getting-started-with-insights.html"]::before {
           mask-image: url("../images/icon-power-16px.svg");
         }
