[skip publish] hide nav tools on portal page

--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -34,6 +34,13 @@ body[data-subpage="portal"] {
     }
   }
 
+  & .site-header {
+    & .dropdown-container,
+    & .navbar-toggle {
+      display: none;
+    }
+  }
+
 
   & .portal-header {
     padding: 0;
