[skip publish] tiny css fix

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -74,7 +74,7 @@ button.navbar-toggle {
     font-weight: var(--body-lg-semibold-font-weight);
     color: var(--text-on-color);
     opacity: 0.8;
-    padding-top: 0.25rem;
+    padding-top: calc(0.25rem + 0.08px);
   }
 }
 .site-header-navbar .navbar-container .navbar-brand img {
