[skip publish] fix api code blocks

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -779,7 +779,27 @@
               }
             }
 
-            .warning, .note, .notice, .important, .caution, .tip, .example {
+            .highlight-code .microlight {
+              font-family: var(--code-font-family);
+              font-size: var(--code-md-font-size);
+              line-height: var(--code-md-line-height);
+              font-weight: var(--code-md-font-weight);
+              letter-spacing: var(--code-md-letter-spacing);
+              border: 0;
+
+              code {
+                display: inline;
+                font-family: var(--code-font-family);
+                background: transparent;
+                color: inherit;
+
+                & * {
+                  font-family: var(--code-font-family);
+                }
+              }
+            }
+
+            .warning, .note, .notice, .important, .caution, .tip, .example:not(.microlight) {
               --gutter-padding-x: 0.5rem;
               --gutter-padding-y: 0.75rem;
               --gutter-icon-width: 1.5rem;
@@ -909,7 +929,7 @@
                 background-color: var(--status-progress-icon);
               }
             }
-            .example {
+            .example:not(.microlight) {
               --gutter-padding-x: 0.25rem;
               --gutter-icon-width: 0rem;
               background-color: var(--background-secondary);
