[skip publish] new logo

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -60,22 +60,11 @@ button.navbar-toggle {
 } 
 .site-header-navbar .navbar-container .navbar-brand {
   float: none;
-  background: url("../images/bitrise-logo.svg") no-repeat center left;
-  padding: 0 0 0 85px;
+  background: url("../images/bitrise-docs-logo.svg") no-repeat center left;
+  padding: 0 0 0 128px;
   height: 32px;
   display: flex;
   align-items: center;
-
-  &::after {
-    content: "Docs";
-    margin-left: 0.25rem;
-    font-size: var(--body-lg-semibold-font-size);
-    line-height: var(--body-lg-semibold-line-height);
-    font-weight: var(--body-lg-semibold-font-weight);
-    color: var(--text-on-color);
-    opacity: 0.8;
-    padding-top: calc(0.25rem + 0.08px);
-  }
 }
 .site-header-navbar .navbar-container .navbar-brand img {
   float: none;
