[skip publish] hide expand icon if there are no submenu items

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -150,6 +150,13 @@
           &[data-topic-level="4"] {
             padding-left: 4.5rem;
           }
+
+          /* ✨Magic✨ - Hide chevron icon if there are no submenus */
+          &:not(:has(+ ul)) {
+            & .glyphicon {
+              display: none;
+            }
+          }
         }
 
         /* Opened menu items */
