[skip publish] sidebar chevron fix

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -159,13 +159,6 @@
           }
         }
 
-        /* Opened menu items */
-        & > ul li.opened > a {
-          & .glyphicon::before {
-            mask-image: url("../images/icon-chevron-up-16px.svg");
-          }
-        }
-
         /* Active menu items */
         &.active > a {
           background-color: var(--background-selected);
@@ -183,6 +176,17 @@
 
           &::before {
             background-color: var(--icon-interactive);
+          }
+        }
+      }
+
+      /* Opened menu items */
+      & > ul li.opened {
+        & > a {
+          & .glyphicon {
+            &::before {
+              mask-image: url("../images/icon-chevron-up-16px.svg");
+            }
           }
         }
       }
