--- a/src/css/global.css
+++ b/src/css/global.css
@@ -114,7 +114,7 @@
     ul.pager {
       padding: 1rem 0 1.5rem 0;
       margin: 0 var(--content-padding) 0 var(--content-padding);
-      max-width: calc(var(--content-max-width) + var(--content-padding) * 2);
+      max-width: var(--content-max-width);
       border-top: 1px solid var(--border-minimal);
       float: none;
       display: flex;
@@ -1070,20 +1070,25 @@
                     & > thead {
                       & > tr {
                         td, th {
-                          border-right: 0;
+                          border-right: 1px solid var(--border-minimal);
                           border-bottom: 0;
                           border-top: 1px solid var(--border-minimal);
-                          border-left: 1px solid var(--border-minimal);
-                        }
-                        td:first-child,
-                        th:first-child {
                           border-left: 0;
+                        }
+                        td:last-child,
+                        th:last-child {
+                          border-right: 0;
                         }
                       }
                     }
 
+                    & > tbody + tbody {
+                      border: 0;
+                    }
+
                     & > caption + thead > tr:first-child,
                     & > colgroup + thead > tr:first-child,
+                    & > tbody:first-child > tr:first-child,
                     & > thead:first-child > tr:first-child {
                       td, th {
                         border-top: 0;
