[skip publish] ai data table colors

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -321,6 +321,8 @@
           padding: 1.5rem var(--content-padding) 3rem var(--content-padding);
           width: 100%;
         }
+
+        /** Swagger content -> :not(:has(#swagger-ui)) **/
         
         div#topic-content {
 
@@ -1097,6 +1099,16 @@
                   }
                 }
               }
+            }
+
+            tr.ai-data-red td {
+              background-color: var(--status-critical-bg);
+            }
+            tr.ai-data-blue td {
+              background-color: var(--status-info-bg);
+            }
+            tr.ai-data-green td {
+              background-color: var(--status-success-bg);
             }
           }
         }
