[skip publish] remove layout-custom-script

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -801,7 +801,7 @@
               }
             }
 
-            .warning, .note, .notice, .important, .caution, .tip, .example:not(.microlight) {
+            div.warning, div.note, div.notice, div.important, div.caution, div.tip, div.example {
               --gutter-padding-x: 0.5rem;
               --gutter-padding-y: 0.75rem;
               --gutter-icon-width: 1.5rem;
@@ -881,7 +881,7 @@
                 }
             }
             
-            .warning {
+            div.warning {
               border-color: var(--status-critical-border);
               &::before {
                 background-color: var(--status-critical-bg);
@@ -891,7 +891,7 @@
                 background-color: var(--status-critical-icon);
               }
             }
-            .note, .note.notice {
+            div.note, div.note.notice {
               border-color: var(--status-info-border);
               &::before {
                 background-color: var(--status-info-bg);
@@ -901,7 +901,7 @@
                 background-color: var(--status-info-icon);
               }
             }
-            .important {
+            div.important {
               border-color: var(--status-success-border);
               &::before {
                 background-color: var(--status-success-bg);
@@ -911,7 +911,7 @@
                 background-color: var(--status-success-icon);
               }
             }
-            .caution {
+            div.caution {
               border-color: var(--status-warning-border);
               &::before {
                 background-color: var(--status-warning-bg);
@@ -921,7 +921,7 @@
                 background-color: var(--status-warning-icon);
               }
             }
-            .tip {
+            div.tip {
               border-color: var(--status-progress-border);
               &::before {
                 background-color: var(--status-progress-bg);
@@ -931,7 +931,7 @@
                 background-color: var(--status-progress-icon);
               }
             }
-            .example:not(.microlight) {
+            div.example {
               --gutter-padding-x: 0.25rem;
               --gutter-icon-width: 0rem;
               background-color: var(--background-secondary);
