--- a/src/css/header.css
+++ b/src/css/header.css
@@ -102,6 +102,10 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(1n) > .external-top-nav-link {
   align-items: center;
   justify-content: center;
   gap: .25rem;
+  width: 120px;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
 
   font-size: var(--button-sm-font-size);
   line-height: var(--button-sm-line-height);
@@ -248,7 +252,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
             flex-direction: column;
           }
 
-          li {
+          li.lang-option {
             margin: 0;
             padding: 0;
 
@@ -258,6 +262,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
               align-items: center;
               padding: var(--dropdown-md-item-padding);
               background: transparent;
+              font-family: var(--base-font-family);
               font-size: var(--dropdown-md-item-font-size);
               line-height: var(--dropdown-md-item-line-height);
               font-weight: var(--dropdown-md-item-font-weight);
