[skip publish] small fixes

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1052,15 +1052,17 @@
 
                   & > thead {
                     background-color: transparent;
-                    &  > tr > th {
-                      background-color: var(--background-secondary);
-                      p {
-                        font-size: var(--heading-h5-font-size);
-                        line-height: var(--heading-h5-line-height);
-                        font-weight: var(--heading-h5-font-weight);
-                        color: var(--text-primary);
-                        text-align: left;
-                      }
+                  }
+
+                  & > thead > tr > th,
+                  & > tbody > tr > td.th {
+                    background-color: var(--background-secondary);
+                    p {
+                      font-size: var(--heading-h5-font-size);
+                      line-height: var(--heading-h5-line-height);
+                      font-weight: var(--heading-h5-font-weight);
+                      color: var(--text-primary);
+                      text-align: left;
                     }
                   }
 
