--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -231,6 +231,9 @@
         &[data-permalink="bitrise-platform/infrastructure.html"]::before {
           mask-image: url("../images/icon-cpu-16px.svg");
         }
+        &[data-permalink="bitrise-platform/ai.html"]::before {
+          mask-image: url("../images/icon-sparkle-16px.svg");
+        }
 
         /* Icons for Bitrias CI subpages */
         &[data-permalink="bitrise-ci/getting-started.html"]::before {
