[skip publish] highlight code blocks

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -680,9 +680,14 @@
               line-height: var(--code-md-line-height);
               font-weight: var(--code-md-font-weight);
               letter-spacing: var(--code-md-letter-spacing);
+              font-family: var(--code-font-family) !important;
               direction: ltr;
               word-wrap: pre-wrap;
               -webkit-overflow-scrolling: touch;
+
+              & * {
+                font-family: var(--code-font-family) !important;
+              }
 
               code {
                 font-family: inherit;
@@ -735,6 +740,30 @@
                 &:active {
                   border: var(--button-secondary-border-active);
                   background: var(--button-secondary-bg-active);
+                }
+              }
+
+              .copy-toast {
+                position: absolute;
+                top: 0.75rem;
+                right: 4.25rem;
+                background: var(--background-secondary);
+                color: var(--text-primary);
+                font-size: var(--body-sm-regular-font-size);
+                line-height: var(--body-sm-regular-line-height);
+                font-weight: var(--body-sm-regular-font-weight);
+                padding: 0.5rem 1rem;
+                border-radius: 0.25rem;
+                box-shadow: var(--elevation-sm);
+                opacity: 0;
+                pointer-events: none;
+                transform: translateY(-1rem);
+                transition: opacity 0.3s ease, transform 0.3s ease;
+
+                &.visible {
+                  opacity: 1;
+                  pointer-events: auto;
+                  transform: translateY(0);
                 }
               }
 
