[skip publish] error page fix

--- a/public/errors/errors.css
+++ b/public/errors/errors.css
@@ -117,7 +117,7 @@ a.button {
   display: inline-block;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 991px) {
   .container {
     grid-column-gap: 0rem;
     grid-row-gap: 0rem;
@@ -132,7 +132,9 @@ a.button {
   section + figure img {
     padding-top: var(--space-16);
   }
+}
 
+@media screen and (max-width: 767px) {
   h2 {
     font-size: 36px;
   }
@@ -232,7 +234,7 @@ footer div.status a.severity-none {
   color: var(--neutral-10);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 991px) {
   footer {
     flex-direction: column;
     gap: var(--space-16);
