[skip publish] fix error page color

--- a/public/errors/errors.css
+++ b/public/errors/errors.css
@@ -13,7 +13,7 @@
   --purple-10: #2b0e3f;
   --purple-30: #5c2a7e;
   --purple-40: #7b3ba5;
-  --purple-80: #ead4f2;
+  --purple-80: #d5adeb;
   --red-70: #ff8091;
   --green-70: #77cf8f;
   --orange-70: #fd9730;
