xcode icon and permalink added

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -292,7 +292,7 @@
         &[data-permalink="bitrise-build-cache/build-cache-for-bazel.html"]::before {
           mask-image: url("../images/icon-bazel-16px.svg");
         }
-        &[data-permalink="--xcode--"]::before {  /* TODO: Update this permalink */
+        &[data-permalink="bitrise-build-cache/build-cache-for-xcode.html"]::before { 
           mask-image: url("../images/icon-xcode-16px.svg");
         }
         &[data-permalink="bitrise-build-cache/insights.html"]::before {
