[skip publish] slack button fix

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -475,6 +475,7 @@
   --button-md-line-height: 1.25rem; /* 20px */
   --button-md-font-weight: 600;
   --button-md-padding: .5rem .75rem; /* 8px 12px */
+  --button-md-border-radius: 0.25rem; /* 4px */
 
   --dropdown-lg-item-padding: 0.75rem 1.5rem 0.75rem 1rem; /* 12px 16px */
   --dropdown-lg-item-font-size: var(--body-lg-regular-font-size);
