--- a/src/css/global.css
+++ b/src/css/global.css
@@ -131,7 +131,7 @@
         display: inline-flex !important;
         align-items: center;
         justify-content: center;
-        border-radius: 0.25rem;
+        border-radius: var(--button-md-border-radius);
         gap: 0.25rem;
         float: none !important;
 
@@ -567,6 +567,44 @@
               }
             }
 
+            p.slack-button {
+              display: block;
+              background: transparent;
+              padding-block: 0;
+              padding-inline: 0;
+              line-height: inherit;
+              outline-offset: 0;
+              border-radius: 0;
+              border-color: transparent;
+              color: inherit;
+            }
+
+            p.slack-button a.link {
+              display: inline-block;
+              font-size: var(--button-md-font-size);
+              line-height: var(--button-md-line-height);
+              font-weight: var(--button-md-font-weight);
+              padding: var(--button-md-padding);
+              color: var(--button-primary-fg);
+              background-color: var(--button-primary-bg);
+              border-radius: var(--button-md-border-radius);
+              text-decoration: none;
+
+              &:hover {
+                background-color: var(--button-primary-bg-hover);
+                color: var(--button-primary-fg-hover);
+              }
+              &:active {
+                background-color: var(--button-primary-bg-active);
+                color: var(--button-primary-fg-active);
+              }
+              &[disabled] {
+                background-color: var(--button-primary-bg-disabled);
+                color: var(--button-primary-fg-disabled);
+                cursor: not-allowed;
+              }
+            }
+
             code {
               padding: 0.125rem 0.375rem;
               display: inline-flex;
@@ -706,7 +744,7 @@
                 top: 0.75rem;
                 right: 1rem;
                 text-indent: -9999px;
-                border-radius: 0.25rem;
+                border-radius: var(--button-md-border-radius);
                 background-color: var(--button-secondary-bg);
                 border: var(--button-secondary-border);
                 color: var(--button-secondary-fg);
