[skip publish] adding icon for CodePush

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -321,6 +321,9 @@
         &[data-permalink="release-management/release-management-api.html"]::before {
           mask-image: url("../images/icon-code-16px.svg");
         }
+        &[data-permalink="release-management/codepush.html"]::before {
+          mask-image: url("../images/icon-terminal-16px.svg");
+        }
 
         /* Icons for Bitrise Insights subpages */
         &[data-permalink="insights/getting-started-with-insights.html"]::before {
