new icon + redirects

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -225,6 +225,9 @@
         &[data-permalink="bitrise-platform/projects.html"]::before {
           mask-image: url("../images/icon-folder-16px.svg");
         }
+        &[data-permalink="bitrise-platform/repository-access.html"]::before {
+          mask-image: url("../images/icon-security-shield-16px.svg");
+        }
         &[data-permalink="bitrise-platform/integrations.html"]::before {
           mask-image: url("../images/icon-arrows-horizontal-16px.svg");
         }
