[skip publish] Fix for tabs issue

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1048,6 +1048,14 @@
               }
             }
 
+            div.tab-content.is-active {
+              display: block;
+            }
+
+            div.tab-content {
+              display: none;
+            }
+
             .table.table-responsive {
               width: 100%;
               max-width: 100%;
