[skip publish] icons for build hub

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -238,7 +238,7 @@
           mask-image: url("../images/icon-sparkle-16px.svg");
         }
 
-        /* Icons for Bitrias CI subpages */
+        /* Icons for Bitrise CI subpages */
         &[data-permalink="bitrise-ci/getting-started.html"]::before {
           mask-image: url("../images/icon-power-16px.svg");
         }
@@ -282,7 +282,15 @@
           mask-image: url("../images/icon-workflow-16px.svg");
         }
 
-        /* Icons for Bitrias Build Cache subpages */
+        /* Icons for Bitrise Build Hub subpages */
+        &[data-externallink="bitrise-build-hub/build-hub-for-github-actions"]::before {
+          mask-image: url("../images/icon-github-16px.svg");
+        }
+        &[data-externallink="bitrise-build-hub/infrastructure"]::before {
+          mask-image: url("../images/icon-cpu-16px.svg");
+        }        
+
+        /* Icons for Bitrise Build Cache subpages */
         &[data-permalink="bitrise-build-cache/getting-started-with-the-build-cache.html"]::before {
           mask-image: url("../images/icon-power-16px.svg");
         }
@@ -305,7 +313,7 @@
           mask-image: url("../images/icon-code-16px.svg");
         }
 
-        /* Icons for Bitrias Release Management subpages */
+        /* Icons for Bitrise Release Management subpages */
         &[data-permalink="release-management/getting-started-with-release-management.html"]::before {
           mask-image: url("../images/icon-power-16px.svg");
         }
