--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -283,10 +283,10 @@
         }
 
         /* Icons for Bitrise Build Hub subpages */
-        &[data-permalink="bitrise-build-hub/build-hub-for-github-actions"]::before {
+        &[data-permalink="bitrise-build-hub/build-hub-for-github-actions.html"]::before {
           mask-image: url("../images/icon-github-16px.svg");
         }
-        &[data-permalink="bitrise-build-hub/infrastructure"]::before {
+        &[data-permalink="bitrise-build-hub/infrastructure.html"]::before {
           mask-image: url("../images/icon-cpu-16px.svg");
         }        
 
